force-app/main/default/objects/NCMT_TCO_Parameter__c/NCMT_TCO_Parameter__c.object-meta.xml
<CustomObject>
    <description>Object for storing the Performance Input parameters for TCO model</description>
    <label>TCO Parameter</label>
    <nameField>
        <displayFormat>TP-{000}</displayFormat>
        <label>TCO Parameters Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCO Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>