force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Basic__c.field-meta.xml
<CustomField>
    <fullName>Basic__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Basic</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>