force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Cooling_Pump_Energy_kBtu_SF_Yr__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Pump_Energy_kBtu_SF_Yr__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cooling Pump Energy kBtu/SF/Yr</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>