force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Easy_EOA__c.field-meta.xml
<CustomField>
    <fullName>Easy_EOA__c</fullName>
    <label>Easy</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>