force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Envelope_Wall_Nom_Perf__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Wall_Nom_Perf__c</fullName>
    <label>Envelope Wall Nom - Perf</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>