force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Fan_Eff_Cost_Modifier_1__c.field-meta.xml
<CustomField>
    <fullName>Fan_Eff_Cost_Modifier_1__c</fullName>
    <label>Fan Eff Cost Modifier 1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>