force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/For_Landscaping__c.field-meta.xml
<CustomField>
    <fullName>For_Landscaping__c</fullName>
    <defaultValue>0</defaultValue>
    <label>For Landscaping</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>