force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Generally_Acceptable__c.field-meta.xml
<CustomField>
    <fullName>Generally_Acceptable__c</fullName>
    <label>Generally Acceptable</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>