force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Glazing_R_Perf__c.field-meta.xml
<CustomField>
    <fullName>Glazing_R_Perf__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Glazing R - Perf</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>