force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Glazing_SHG_Perf__c.field-meta.xml
<CustomField>
    <fullName>Glazing_SHG_Perf__c</fullName>
    <label>Glazing SHG - Perf</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>