force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/GSA_Standard__c.field-meta.xml
<CustomField>
    <fullName>GSA_Standard__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GSA Standard</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>