force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Heating_Eff_Perf__c.field-meta.xml
<CustomField>
    <fullName>Heating_Eff_Perf__c</fullName>
    <label>Heating Eff - Perf</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>