force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Heating_System_Loss_Perf__c.field-meta.xml
<CustomField>
    <fullName>Heating_System_Loss_Perf__c</fullName>
    <label>Heating System Loss - Perf</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>