force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/High__c.field-meta.xml
<CustomField>
    <fullName>High__c</fullName>
    <defaultValue>0</defaultValue>
    <label>High</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>