force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Lighting_System_Perf__c.field-meta.xml
<CustomField>
    <fullName>Lighting_System_Perf__c</fullName>
    <label>Lighting System - Perf</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>