force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Lightning_Control_Cost_Modifier_2__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Control_Cost_Modifier_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lightning Control Cost Modifier 2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>