force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/None__c.field-meta.xml
<CustomField>
    <fullName>None__c</fullName>
    <defaultValue>0</defaultValue>
    <label>None</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>