force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Plug_Load_Perf__c.field-meta.xml
<CustomField>
    <fullName>Plug_Load_Perf__c</fullName>
    <label>Plug Load - Perf</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>