force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Poor__c.field-meta.xml
<CustomField>
    <fullName>Poor__c</fullName>
    <label>Poor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>