force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Roof_Cost_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Roof_Cost_Modifier__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Roof Cost Modifier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>