force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Superior__c.field-meta.xml
<CustomField>
    <fullName>Superior__c</fullName>
    <label>Superior</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>