force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State of the art</fullName>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>ASHRAE 90.1</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Outdated</fullName>
            </value>
            <value>
                <fullName>Ease of Access</fullName>
            </value>
            <value>
                <fullName>Workplace Efficiency</fullName>
            </value>
            <value>
                <fullName>Utility Water</fullName>
            </value>
            <value>
                <fullName>Routine Maintenance Modifier</fullName>
            </value>
            <value>
                <fullName>Supplies Modifier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>