force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Very_Difficult_EOA__c.field-meta.xml
<CustomField>
    <fullName>Very_Difficult_EOA__c</fullName>
    <label>Very Difficult</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>