force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Very_High__c.field-meta.xml
<CustomField>
    <fullName>Very_High__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Very High</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>