force-app/main/default/objects/NCMT_TCO_Parameter__c/fields/Very_poor__c.field-meta.xml
<CustomField>
    <fullName>Very_poor__c</fullName>
    <label>Very poor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>