force-app/main/default/objects/NCMT_TCO_Parameter__c/recordTypes/EaseofAccess.recordType-meta.xml
<RecordType>
    <fullName>EaseofAccess</fullName>
    <active>true</active>
    <label>EaseofAccess</label>
</RecordType>