force-app/main/default/objects/NCMT_TCO_Parameter__c/recordTypes/LOS.recordType-meta.xml
<RecordType>
    <fullName>LOS</fullName>
    <active>true</active>
    <description>Record type for routine maintenance and supplies</description>
    <label>LOS</label>
</RecordType>