force-app/main/default/objects/NCMT_TCO_Parameter__c/recordTypes/UtilityWater.recordType-meta.xml
<RecordType>
    <fullName>UtilityWater</fullName>
    <active>true</active>
    <label>UtilityWater</label>
</RecordType>