force-app/main/default/objects/NCMT_TCO_Parameter__c/recordTypes/WorkplaceEff.recordType-meta.xml
<RecordType>
    <fullName>WorkplaceEff</fullName>
    <active>true</active>
    <label>WorkplaceEff</label>
</RecordType>