force-app/main/default/objects/NCMT_TCO_Parameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Roof_Cost_Modifier__c</columns>
    <columns>Wall_Nom_Cost_Modifier__c</columns>
    <columns>Slab_Unit_Cost__c</columns>
    <columns>Glaz_R_Cost_Modifier__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>