force-app/main/default/objects/NCMT_TCO_Parameter__c/listViews/FY_2020.listView-meta.xml
<ListView>
    <fullName>FY_2020</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Envelope_Roof_Perf__c</columns>
    <columns>Envelope_Wall_Act_Perf__c</columns>
    <columns>Envelope_Wall_Nom_Perf__c</columns>
    <columns>Cooling_Eff_Perf__c</columns>
    <columns>Heating_Eff_Perf__c</columns>
    <columns>Fan_Efficiency_Perf__c</columns>
    <columns>Glazing_R_Perf__c</columns>
    <columns>Glazing_SHG_Perf__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>FY-2020</label>
</ListView>